--- a/index.html
+++ b/index.html
@@ -5,9 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock paper scissors</title>
-    <script src="scripts.js"></script>
+    <link rel="stylesheet" href="styles.css">
+    <script src="scripts.js" defer></script>
 </head>
 <body>
-    
+    <header>
+        <div class="header">
+            <h1 id="header-title">Rock paper scissors</h1>
+        </div>
+    </header>
+
+    <div id="mid-page">
+        <button data-class="rock" class="rock">Rock</button>
+        <button data-class="paper" class="paper">Paper</button>
+        <button data-class="scissors" class="scissors">Scissors</button>
+    </div>
+
+    <div class="score-part">
+        <div class="human">
+            <div class="left-side">Human</div>
+            <div class="human-score">0</div>
+        </div>
+        <div class="computer">
+            <div class="right-side">Computer</div>
+            <div class="computer-score">0</div>
+        </div>
+        
+    </div>
 </body>
 </html>
